# Musix2.0

./: .gitignore  Cargo.toml  Dockerfile  README.md  how_to_write_rust_tips.txt
settings/: settings.json
src/: audio_extractor.rs  audio_tag_appender.rs  command_line_extractor.rs  command_line_runtime.rs  database.rs  environment_extractor.rs  environment_initializer.rs  external_file_service.rs  main.rs  music_sources.rs  playlist_extractor.rs  post_processor.rs  process.rs  s3_service.rs  settings_parser.rs  title_extractor.rs  url_enforcer.rs  youtube_playlist_extractor.rs  yt_dlp_caller.rs
src/music_sources/: soundcloud_service.rs  youtube_service.rs
src/resources/: api_key.txt
