[package]
name = "Musix2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = { version = '0.6.0', features = ['blocking'] }
regex = "1.10.2"
uuid = { version = "1.7.0", features = ['v4'] }
getset = "0.1.2"
audiotags = "0.5.0"
futures = "0.3.30"
"rusqlite" = "0.31.0"
clap = { version = "4.5.3", features = ['derive'] }
serde_json = "1.0.114"
serde = "1.0.197"
lazy_static = "1.4.0"
ureq = "2.12.1"
aws-config = "1.5.14"
aws-sdk-s3 = "1.69.0"
rand = "0.9.0"
